fix to logo on mobile - sizing

--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -128,12 +128,6 @@
   @media (--media-max-desktop) {
     padding: 8px 0 13px;
   }
-  @nest & img {
-    @media (--media-max-desktop) {
-      max-width: 40px;
-      margin-top: 4px;
-    }
-  }
 }
 
 .logo {
